--- a/public/exercise.html
+++ b/public/exercise.html
@@ -112,7 +112,7 @@
       </div>
     </div>
     <div id="toast">Workout Added Successfully!</div>
-    <script src="/api.js"></script>
-    <script src="/exercise.js"></script>
+    <script src="/assets/js/api.js"></script>
+    <script src="/assets/js/exercise.js"></script>
   </body>
 </html>
